src/DataTable/DataTable.scss
@import '../common';
@import '../typography-helpers';

$headerShadow: inset 0 1px 0 0 $B30, inset 0 -1px 0 0 $B30;
$columnShadow: inset 0 -1px 0 0 $D60;
$activeColumnShadow: inset 0 -1px 0 0 $D70;
$rowShadow: inset 0 1px 0 0 $D70;

.table {
  border-collapse: collapse;
  border-spacing: 0px;
  font-family: HelveticaNeueW01-55Roma, HelveticaNeueW02-55Roma, HelveticaNeueW10-55Roma, sans-serif;
  table-layout: fixed;
  background-color: white;
}

.table td,.table th {
  padding-left: 12px;
  padding-right: 12px;

  &:first-child {
    padding-left:30px;
    padding-right: 12px;
  }

  &:last-child {
    padding-left: 12px;
    padding-right: 30px;
  }
}

.table th {
  background-color: $B40;
  padding-top: 9px;
  padding-bottom: 9px;
  height: 24px;
  color: $D10;
  font-weight: normal;
  box-shadow: $headerShadow;

  .th-container {

    display: flex;
    align-items: center;

    // Support for alignment within flex
    &.alignStart {
      justify-content: flex-start;
    }

    &.alignCenter {
      justify-content: center;
    }

    &.alignEnd {
      justify-content: flex-end;
    }

    .infoTooltipWrapper {
      margin-left: 6px;
    }
  }

  &.th-text {
    @include Text($weight: normal, $size: small);
  }
}


.table td {
  @include Text($weight: thin, $size: small, $secondary: true);

  &.largeVerticalPadding {
    padding-top: 24px;
    padding-bottom: 24px;
  }

  &.mediumVerticalPadding {
    padding-top: 18px;
    padding-bottom: 18px;
  }

  // Cells alignment
  &.alignStart {
    text-align: left;
    text-align: start; // not supported in IE11 & Edge; 'left' as fallback
  }

  &.alignCenter {
    text-align: center;
  }

  &.alignEnd {
    text-align: right;
    text-align: end; // not supported in IE11 & Edge; 'right' as fallback
  }
}

.table.showLastRowDivider td {
  box-shadow: $columnShadow;
}

.table:not(.showLastRowDivider) {
  & tr:not(:last-child) {
    td {
      box-shadow: $columnShadow;
    }
  }
}

.table td.details {
  padding: 0px;
  height: 0px;
  box-shadow: none;
}

.table td.active {
  padding: 0px;
  height: auto;
  box-shadow: $activeColumnShadow;
}

.table td.important {
  @include Text($weight: thin, $size: medium);
}

.clickableDataRow {
  cursor: pointer;
}

.sortArrow {
  font-size: 9px;
  margin-left: 6px;
  color: $B10;
  display: flex;
  align-items: center;
}

.row-details:not(:last-child) {
  box-shadow: $activeColumnShadow;

  .row-details-inner {
    box-shadow: $rowShadow;
  }
}

.animatedDataRow {
  td {
    box-shadow: none;
  }

  cursor: pointer;

  &:nth-last-child(2) {
    td {
      box-shadow: $rowShadow;
    }
  }
}

